# github-actions

./: .env  10_04.ipynb  16_04.ipynb
.github/workflows/: publish.yaml  run.yaml
pixi/: pyproject.toml
pixi/src/pixi/: __init__.py
pixi/tests/: test.py
