[project]
name = "pixi"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["black", "flask[async]==3.1.0", "rich"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
black = ">=25.1.0,<26"
rich = ">=14.0.0,<15"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[dependency-groups]
test = ["pytest"]
